--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,20 +1,15 @@
 // Стили контейнера
 
 .container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 320px;
+  margin: 0 auto;
   padding: 0 15px;
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    width: calc(480px - 18px);
+  @media screen and (min-width: 768px) {
+    width: 748px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: calc(768px - 18px);
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: calc(1200px - 18px);
+  @media screen and (min-width: 1440px) {
+    width: 1420px;
   }
 }
