--- a/src/components/AppFooter/AppFooter.module.scss
+++ b/src/components/AppFooter/AppFooter.module.scss
@@ -3,9 +3,11 @@
 .footer {
   border-top: 1px solid #ececec;
   margin-top: 25px;
+  box-shadow: 0px -4px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 .text {
   text-align: center;
   padding: 20px 0;
+  color: #50c878;
 }
