--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: 320px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 48px 15px;
 
   @media screen and (min-width: 768px) {
     width: 748px;
