--- a/src/components/GoBackButton/GoBackButton.module.scss
+++ b/src/components/GoBackButton/GoBackButton.module.scss
@@ -1,20 +1,35 @@
-.button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 5px 20px;
+.ButtonGoBack {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  width: 120px;
+  font-size: 18px;
+  font-weight: bold;
   border: none;
-  border-radius: 5px;
-
-  background-color: #e0e4e4;
-
-  // transition: all $transition-duration $transition-timing;
+  border-radius: 4px;
+  opacity: 0.9;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    0deg,
+    rgb(33, 51, 251) 0%,
+    rgba(0, 0, 0, 0.846) 100%
+  );
+  color: #fff;
+  overflow: hidden;
 
   &:hover,
   &:focus {
-    color: white;
-    background-color: $base-color;
-
-    // transition: all $transition-duration $transition-timing;
+    opacity: 1;
+    transform: scale(1.1);
+    color: #1109f0;
+    background: transparent;
+    box-shadow: none;
+  }
+  .Label {
+    margin-left: 10px;
   }
 }
