--- a/src/components/LoadMoreButton/LoadMoreButton.module.scss
+++ b/src/components/LoadMoreButton/LoadMoreButton.module.scss
@@ -6,33 +6,35 @@
 }
 
 .button {
-  display: inline-block;
-
-  min-width: 180px;
-  padding: 8px 16px;
-  border-radius: 2px;
-  border: 0;
-
-  color: #fff;
-  // background-color: $base-color;
-  // box-shadow: $box-shadow;
-
-  text-align: center;
-  text-decoration: none;
-  font-family: inherit;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  width: 150px;
+  margin-top: 25px;
   font-size: 18px;
-  line-height: 24px;
-  font-style: normal;
-  font-weight: 500;
-
-  opacity: 1;
-
-  // transition: opacity $transition-duration $transition-timing;
-
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  opacity: 0.9;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    0deg,
+    rgb(33, 51, 251) 0%,
+    rgba(0, 0, 0, 0.846) 100%
+  );
+  color: #fff;
+  overflow: hidden;
 
   &:hover,
   &:focus {
-    opacity: 0.8;
+    opacity: 1;
+    transform: scale(1.1);
+    color: #1109f0;
+    background: transparent;
+    box-shadow: none;
   }
 }
