--- a/src/index.css
+++ b/src/index.css
@@ -11,21 +11,6 @@ html {
   height: 100%;
 }
 
-body {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: 1fr auto;
-  margin: 0;
-  padding: 0;
-
-  background-color: #fafafa;
-  color: #161616;
-
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 img {
   display: block;
   max-width: 100%;
@@ -53,6 +38,27 @@ p {
   font-size: inherit;
   margin: 0;
   padding: 0;
+}
+
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  margin: 0;
+  padding: 0;
+
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  color: #888;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  background: rgb(150, 150, 150);
+  background: radial-gradient(
+    ellipse at center,
+    rgba(150, 150, 150, 1) 0%,
+    rgba(89, 89, 89, 1) 100%
+  );
 }
 
 .active {
